--- a/Home/index.html
+++ b/Home/index.html
@@ -28,7 +28,7 @@
                 </i>
             </a>
         </div>
-        <div class="center">
+        <div class="center" style="text-align: center; font-size: 35px; font-weight: 500;">
             <a href="../product/index.html">
                 Products
                 <i class="fas fa-chevron-down">
@@ -41,7 +41,7 @@
                 Tasty News
             </a>
             <a href="#">
-                <img alt=" Logo" height="50" src="../images/BTM_logo.png" width="100" />
+                <img alt=" Logo" height="25" src="../images/BTM_logo.png" width="75" />
             </a>
             <a href="#">
                 About us
@@ -88,7 +88,7 @@
 
     <div class="products">
         <div class="product">
-            <img alt="Jar of Jams" height="150"
+            <img alt="Jar of Jams"
                 src="https://storage.googleapis.com/a1aa/image/WlZ--c44GbLDP75NSQrjjEbOVsHdUIOmSP5zRg9TYjA.jpg"
                 width="100" />
             <p>
@@ -105,7 +105,7 @@
         </div>
         <div class="product">
             <img alt="Jar of Honey"
-                src="https://storage.googleapis.com/a1aa/image/ANyAL3SHbjoLMYkLf7ej8EcEdrrQW7C1PsTakV8BsQ0.jpg" />
+                src="https://storage.googleapis.com/a1aa/image/ANyAL3SHbjoLMYkLf7ej8EcEdrrQW7C1PsTakV8BsQ0.jpg" width="100"/>
             <p>
                 Honey
             </p>
@@ -206,7 +206,7 @@
                 <img alt="Illustration of a knife and plate for spreading" height="300"
                     src="https://storage.googleapis.com/a1aa/image/RVJbGMqEAURNWMxlpu-MlMLvSF24_VT_18yX_Y9FgAw.jpg"
                     width="300" />
-                <h2>
+                <h2 style="color: #333;">
                     FOR SPREADING
                 </h2>
                 <p>
@@ -217,7 +217,7 @@
                 <img alt="Illustration of a spoon for spooning" height="300"
                     src="https://storage.googleapis.com/a1aa/image/uPKW7XlonU4nACk5djyHeurwDsra7YnoLpT2X0pjPeo.jpg"
                     width="300" />
-                <h2>
+                <h2 style="color: #333;">
                     FOR SPOONING
                 </h2>
                 <p>
@@ -239,7 +239,7 @@
                 <img alt="Illustration of a jar with a drink for drinking" height="300"
                     src="https://storage.googleapis.com/a1aa/image/KknqxiyBk3hzcskqf3iOo29xdLVp2VRfEgchVVAKauw.jpg"
                     width="300" />
-                <h2>
+                <h2 style="color: #333;">
                     FOR DRINKING
                 </h2>
                 <p>
